updates to README

--- a/README
+++ b/README
@@ -10,3 +10,5 @@ application.
 3. Only MAC addresses are captured. Plan to add IP in next commit.
 
 4. To stop program use Ctrl-C or send it SIGINT in any other way.
+
+5. Number of possible hosts to log is 32.
